[package]
name = "ec_weather"
version = "0.6.0"
edition = "2021"
authors = ["Massimo Fasciano <massimo@mafalitic.com>"]
description = "Get current weather conditions from Environment Canada"

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.2", features = ["derive"]}
derive_more = "0.99.17"
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-error = "0.1.2"
serde-xml-rs = "0.6.0"
serde_json = "1.0.96"

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl = { version = "*", features = ["vendored"] }

[features]
#default = ["data_json"]
default = []
data_json = []
